# housing-fraud-intel-api-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
published_snapshot/: PUBLISHED_MANIFEST.json
published_snapshot/curated_exports/: chatgpt_request_queue.jsonl  chatgpt_request_queue_processed.jsonl
published_snapshot/curated_exports/bridge_status/: bridge_identity_latest.json  bridge_publish_blocked.json  bridge_queue_state.json  bridge_queue_workboard.json  bridge_task_ledger.jsonl  chatgpt_codex_processed.jsonl  chatgpt_codex_rejected.jsonl  latest_bridge_run.json  mcp_bridge_context.json  routine_bridge_check_latest.json  (+1 more)
published_snapshot/curated_reports/: bridge_health_latest.json  bridge_health_latest.md  bridge_queue_normalization_audit_latest.json  bridge_rejections_latest.json  bridge_rejections_latest.md  bridge_requeued_rejections_latest.json  snapshot_diff_latest.json
published_snapshot/reference_data/: local_data_README.md  manual_review_queue.jsonl
published_snapshot/schemas/: bridge_command_request.schema.json  bridge_command_result.schema.json  bridge_identity_attestation.schema.json  bridge_task_ledger_entry.schema.json  chatgpt_request.schema.json  evidence_ledger_entry.schema.json  mcp_bridge_context.schema.json  parcel_lineage_graph.schema.json  qsof_bridge_event.schema.json  qsof_state_transition.schema.json  qsof_task_object.schema.json  uvip_qsom_mesh_payload.schema.json  uvip_qsom_scan_report.schema.json
published_snapshot/source_docs/: BRIDGE_VALIDATION_METRIC.md  GITHUB_CHATGPT_WRITEBACK.md  MCP_BRIDGE_INTEGRATION.md  QSOF_BRIDGE_ARCHITECTURE.md  RECORDER_DOCNUM_CAMPAIGN_OPERATIONS.md
published_snapshot/source_metadata/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMPLIANCE.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: ci.sh
src/housing_fraud_intel_mcp/: __init__.py  server.py
tests/: test_server.py
(+96 files in other folders)
