[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing-fraud-intel-api"
version = "0.1.0"
description = "Lawful, auditable housing fraud network intelligence API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jellyfish>=1.1",
  "matplotlib>=3.9",
  "networkx>=3.3",
  "numpy>=2.0",
  "pandas>=2.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyJWT>=2.9",
  "PyYAML>=6.0",
  "qrcode[pil]>=8.2",
  "python-multipart>=0.0.9",
  "reportlab>=4.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008", "E402", "E501", "I001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
